# chatbot-rag-gunadarma-frontend

./: .env.example  .gitignore  Dockerfile  README.md  api_client.py  app.py  chainlit.md  pyproject.toml
.chainlit/: config.toml
config/: __init__.py  starter_questions.py
public/: script.js  style.css
src/: __init__.py
src/application/: __init__.py  services.py  use_cases.py
src/core/: __init__.py  exceptions.py  interfaces.py
src/domain/: __init__.py  entities.py  enums.py  value_objects.py
src/infrastructure/: __init__.py  api.py  cache.py  config.py
src/presentation/: __init__.py  config.py  controllers.py  formatters.py
utils/: cache.py
